# otango_backend

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yaml  test_scp.yaml
backend/: Cargo.toml  data.json
backend/src/: main.rs  schema.sql
common/: Cargo.toml
common/src/: data.rs
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: info.rs  lesson.rs  main.rs  properties.rs  util.rs
frontend/src/component/: kanji.rs  mod.rs  tag.rs  word.rs
src/: data.rs  error.rs  main.rs  schema.sql  test_data.sql
src/data/: auth.rs  dictionary.rs  mod.rs  tag.rs
src/web/: auth.rs  dictionary.rs  mod.rs
