[package]
name = "otango"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.1"
actix-web = { version = "4", features = ["openssl"] }
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
config = { git = "https://github.com/AidoP/config" }
once_cell = "1.10"
openssl = { version = "0.10" }
r2d2 = "0.8.9"
r2d2_sqlite = "0.20.0"
rusqlite = { version = "0.27.0", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"