[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common", features = ["db", "actix"] }
actix-web = { version = "4", features = ["openssl"] }
actix-cors = "0.6.1"
openssl = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"

rusqlite = "0.27.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.20.0"