[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"

rusqlite = { version = "0.27.0", optional = true }
r2d2 = { version = "0.8.9", optional = true }
r2d2_sqlite = { version = "0.20.0", optional = true }

actix-web = { version = "4", optional = true }

[features]
db = ["rusqlite", "r2d2", "r2d2_sqlite"]
actix = ["actix-web"]