[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"

gloo-net = "0.2.0"
urlencoding = "2.1.0"
wasm-bindgen-futures = "0.4.30"